# proofs-of-concept

./: .gitignore  README.md
c/07_ups-hat-ina219/: INA219.c  INA219.py  Makefile
c/08_int-to-char/: .clang-format  CMakeLists.txt  benchmark.cpp  library-test.cpp  library.c  library.h  vcpkg.json
cpp/06_ring-buffer-spsc-queue-benchmarking/: CMakeLists.txt
cpp/06_ring-buffer-spsc-queue-benchmarking/src/: CMakeLists.txt  main.cpp  pc_queue.h
cpp/06_ring-buffer-spsc-queue-benchmarking/src/pc_queue_impl/: atomic_queue.h  mutex_deque.h  my_ringbuffer.h  reader_writer_queue.h
cpp/07_face-detection/: Makefile  main.cpp  test.cpp
cpp/08_parallelism/: 08_parallelism.sln
cpp/08_parallelism/2_mkl/3_multithreading/: CMakeLists.txt  README.md  func.cpp  main.py  mkl-dot-product.cpp  mkl-funcs.cpp  mkl-impl.cpp  my-dot-product.cpp  my-dot-product.cs  my-funcs.cpp  np-impl.py  rand.c
cpp/08_parallelism/2_mkl/3_multithreading/my.funcs/: Program.cs
cpp/08_parallelism/2_mkl/3_multithreading/my.impl/: Program.cs
cpp/08_parallelism/2_mkl/3_vector-multiplication-dot-product/: CMakeLists.txt  func.h  main.py  mkl-dot-product.cpp  my-dot-product.cpp  rand.c  rand.h
cpp/08_parallelism/2_mkl/3_vector-multiplication-dot-product/my.dot.product/: Program.cs  my.dot.product.sln
cpp/09_lockfree/: Makefile  concurrent-queue-wrapper.h  core.19559  core.19632  driver.cpp  linked-list-impl.h  linked-list-locked-impl.h  naive-impl.h  reader-writer-queue-wrapper.h
cpp/09_lockfree/binary-search-tree/: CMakeLists.txt  bst-locked-impl-test.cpp  bst-locked-impl.h  main.cpp  vcpkg.json
cpp/09_lockfree/ringbuffer/: CMakeLists.txt  rightbuffer-1p1c-impl-test.cpp  rightbuffer-spsc-impl-test.cpp  ringbuffer-1p1c-impl.h  ringbuffer-spsc-impl.h
cpp/10_zeromq/: CMakeLists.txt  README.md  puller.cpp  pusher.cpp  utils.h  vcpkg.json
cpp/11_ipc-queue/: CMakeLists.txt  vcpkg.json
cpp/11_ipc-queue/src/: consumer.cpp  producer.cpp  test_payload.proto
cpp/12_orderbook/: CMakeLists.txt  README.md  bst-impl-test.cpp  bst-impl.h  bst-locked-impl-test.cpp  order.h
cpp/12_orderbook/src/: bst-impl-test.cpp  bst-impl.h  heap-impl-test.cpp  heap-impl.h
cpp/12_singleton/: CMakeLists.txt  README.md  singleton-benchmark.cpp  singleton-impl.h  singleton-test.cpp  vcpkg.json
cpp/13_tws-api/: README.md
cpp/13_tws-api/src/TestCppClient/: CMakeLists.txt  Main.cpp  TestCppClient.cpp  TestCppClient.h  vcpkg.json
cpp/13_tws-api/src/market-data-consumer/: CMakeLists.txt  ContractSamples.cpp  ContractSamples.h  Main.cpp  TestCppClient.cpp  TestCppClient.h  Utils.cpp  Utils.h  vcpkg.json
cpp/13_tws-api/src/market-data-consumer/twsapi_macunix.1030.01/: test.cpp
cpp/13_tws-api/src/market-data-consumer/twsapi_macunix.1030.01/IBJts/samples/: test.py
cpp/13_tws-api/src/market-data-consumer/twsapi_macunix.1030.01/IBJts/samples/Cpp/TestCppClient/: CMakeLists.txt  Main.cpp  TestCppClientStatic
cpp/13_tws-api/src/market-data-consumer/twsapi_macunix.1030.01/IBJts/source/pythonclient/: his.py  test.py
csharp/ipc-queue/: IpcPcQueue.sln
csharp/ipc-queue/ConsoleApp4/: ConsoleApp4.sln  IpcPcQueue.sln
csharp/ipc-queue/ConsoleApp4/ConsoleApp4/: ConsoleApp4.csproj  Program.cs
csharp/ipc-queue/ConsoleApp4/IpcPcQueue.Driver/: IpcPcQueue.Driver.csproj  Program.cs
csharp/ipc-queue/ConsoleApp4/IpcPcQueue.Queue/: MpscLockedQueue.cs  MpscQueue.cs  SpscQueue.cs
csharp/ipc-queue/IpcPcQueue.Benchmark/: IpcPcQueue.Benchmark.csproj  Program.cs  README.md  Utils.cs
csharp/ipc-queue/IpcPcQueue.Benchmark/Properties/: launchSettings.json
csharp/ipc-queue/IpcPcQueue.Queue/: IQueue.cs  MpscQueue.cs  SpscQueue.cs
csharp/ipc-queue/IpcPcQueue.QuickStart.Consumer/: IpcPcQueue.QuickStart.Consumer.csproj  Program.cs
csharp/ipc-queue/IpcPcQueue.QuickStart.Producer/: IpcPcQueue.QuickStart.Producer.csproj  Program.cs
csharp/ipc-queue/IpcPcQueue.Tests.Consumer/: IpcPcQueue.Tests.Consumer.csproj  Program.cs
csharp/ipc-queue/IpcPcQueue.Tests.Producer/: Program.cs
csharp/ipc-queue/IpcQueue.QuickStart.Consumer/: Program.cs
csharp/ipc-queue/IpcQueue.QuickStart.Producer/: Program.cs
ethereum/: 1_write-message-to-block.MD  1_write-message-to-block.cjs  package-lock.json  package.json
face-recognition-test/: Makefile
python/tws-api/: get-all-products.py  head-timestamp.py  historical-market-data.py  sehk.csv  test.ipynb
